[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.11.1"                                  # helps manage buffers
libc = "0.2"                                     # for pipe system call
termion = "4.0.6"
thiserror = "1.0.38"                             # error handling
